--- a/GUI/ui_dir/Dlg2_Menu2_Evt.ui
+++ b/GUI/ui_dir/Dlg2_Menu2_Evt.ui
@@ -11,7 +11,11 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>General 5ho</string>
+  </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>../icon/dron.jpeg</normaloff>../icon/dron.jpeg</iconset>
   </property>
   <widget class="QLabel" name="label">
    <property name="geometry">
