--- a/GUI/ui_dir/MainWindow.ui
+++ b/GUI/ui_dir/MainWindow.ui
@@ -17,7 +17,11 @@
    </sizepolicy>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>General 5ho</string>
+  </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>../icon/dron.jpeg</normaloff>../icon/dron.jpeg</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QScrollArea" name="scrollArea">
@@ -198,7 +202,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>:/icon/back.png</pixmap>
+     <pixmap>../icon/back.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
