--- a/GUI/ui_dir/Topology.ui
+++ b/GUI/ui_dir/Topology.ui
@@ -11,7 +11,11 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>General 5ho</string>
+  </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>../icon/dron.jpeg</normaloff>../icon/dron.jpeg</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QGraphicsView" name="graphicsView">
