PyQt & QtDesigner GUI (최민철 - 이벤트 처리1)

--- a/GUI/ui_dir/Dlg3_Menu3_Evt.ui
+++ b/GUI/ui_dir/Dlg3_Menu3_Evt.ui
@@ -17,35 +17,25 @@
    <iconset>
     <normaloff>../icon/dron.jpeg</normaloff>../icon/dron.jpeg</iconset>
   </property>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>40</y>
-     <width>320</width>
-     <height>15</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>정말 선택한 스냅샷을 삭제하시겠습니까?</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
-   </property>
-  </widget>
-  <widget class="QDialogButtonBox" name="buttonBox">
-   <property name="geometry">
-    <rect>
-     <x>75</x>
-     <y>90</y>
-     <width>200</width>
-     <height>30</height>
-    </rect>
-   </property>
-   <property name="standardButtons">
-    <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
-   </property>
-  </widget>
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="0">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>정말 선택한 스냅샷을 삭제하시겠습니까?</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+     </property>
+    </widget>
+   </item>
+  </layout>
  </widget>
  <resources/>
  <connections/>
